--- a/src/ToDo.txt
+++ b/src/ToDo.txt
@@ -1,4 +1,5 @@
 -TypeDefAxis, TypeDefBlob, TypeDefMeasurement, TypeDefStructure, Instance und Transformer - Klassen fertig definieren.
 -Tokens für obiges eintragen.
+-arComponent Verwendung finden
 -Ab Blob weiter durch Standard gehen, Kommentare einbringen und a2l package updaten.
 -Anschließend auslesen der Characteristic Values aus der Hex implementieren
