--- a/src/ToDo.txt
+++ b/src/ToDo.txt
@@ -1,3 +1,4 @@
--Tokens neu sortieren und KeyWord Liste neu afubauen.
+-ihex32 und srec19 zusammenführen.
+-Tokens neu sortieren und KeyWord Liste neu aufbauen.
 -Ab Blob weiter durch Standard gehen, Kommentare einbringen und a2l package updaten.
 -Anschließend auslesen der Characteristic Values aus der Hex implementieren
